crates/plotnik-lib/tests/02-parser/recovery_validation/pipe_in_sequence.txt
Q = {(a) | (b)}
------------------ DIAGNOSTICS -------------------
error: patterns are separated by whitespace
 --> query.ptk:1:10
  |
1 | Q = {(a) | (b)}
  |          ^
  |
help: remove the `|`
  |
1 - Q = {(a) | (b)}
1 + Q = {(a)  (b)}
  |
